--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ align-content: center;
 justify-content: center;
 background-color: black;
 font-family: "IBM BIOS-2y", monospace;
-font-size: min(calc(100vh * .75), calc(2 * calc(100vw * .75) / 10))}
+font-size: min(75vh, 15vw)}
 </style>
 </head>
 <body>he took it</body>
