--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ align-items: center;
 align-content: center;
 justify-content: center;
 background-color: black;
-font-family: "IBM BIOS-2y", monospace;
-font-size: min(75vh, 15vw)}
+font-size: min(75vh, 15vw);
+font-family: "IBM BIOS-2y", monospace}
 </style>
 </head>
 <body>he took it</body>
